# Placement_Pulse

./: .gitignore  CONTRIBUTING.md  README.md  SETUP.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS
.github/workflows/: add_scraper.yml  ci.yml  daily_update.yml
categories/fellowship/: README.md
categories/fresher-job/: README.md
categories/hackathon/: README.md
categories/internship/: README.md
categories/open-source-program/: README.md
categories/student-ambassador/: README.md
companies/10a-labs/: README.md
companies/11-fps/: README.md
companies/1password/: README.md
companies/2u/: README.md
companies/3m/: README.md
companies/3s-business-corporation/: README.md
companies/60decibelsinc/: README.md
companies/8vc/: README.md
companies/908-devices/: README.md
companies/Adobe/: README.md
companies/Amazon/: README.md
companies/Apple/: README.md
companies/Atlassian/: README.md
companies/Flipkart/: README.md
companies/NVIDIA/: README.md
companies/Razorpay/: README.md
companies/Swiggy/: README.md
companies/Zoho/: README.md
companies/aar/: README.md
companies/aarete/: README.md
companies/abb/: README.md
companies/abbvie/: README.md
companies/abes-institute-of-technology/: README.md
companies/abound/: README.md
companies/absolute-facility-solutions/: README.md
companies/absurd/: README.md
companies/accel-learning/: README.md
config/: settings.py
scripts/: main.py  pipeline.py
stats/: categories.csv  companies.csv  daily.csv
website/: 404.html  index.html  search.json  stats.json
(+1699 files in other folders)
