[project]
name = "placementpulse"
version = "1.0.0"
description = "Automated discovery and publishing of Indian tech internship and placement opportunities"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["internship", "placement", "india", "jobs", "careers", "automation"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # Line too long — not enforced
    "F841",   # Local variable assigned but never used — handled case-by-case
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
addopts = "-v --tb=short"
markers = [
    "smoke: tests that require network access to external services",
]
